--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,18 @@
-name: Inkay-CI
+name: wups-CI
 
 on: push
 
 jobs:
-    build-inkay:
+    build-wups:
         runs-on: ubuntu-22.04
         steps:
             - uses: actions/checkout@v2
             - name: build toolchain container
               run: docker build . -t builder
             - uses: ammaraskar/gcc-problem-matcher@master
-            - name: build Inkay
+            - name: build WUPS plugin
               run: docker run --rm -v ${PWD}:/app -w /app builder
             - uses: actions/upload-artifact@master
               with:
-                  name: inkay
+                  name: plugin
                   path: "*.wps"
