--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,13 @@ jobs:
     build-wups:
         runs-on: ubuntu-22.04
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
             - name: build toolchain container
               run: docker build . -t builder
             - uses: ammaraskar/gcc-problem-matcher@master
             - name: build WUPS plugin
               run: docker run --rm -v ${PWD}:/app -w /app builder
-            - uses: actions/upload-artifact@master
+            - uses: actions/upload-artifact@v4
               with:
-                  name: plugin
+                  name: meowth
                   path: "*.wps"
